[workspace]
# Extra tooling projects will be added.
members = ["anchor", "anchor/client", "anchor/http_api", "anchor/qbft", "anchor/network", "anchor/common/version"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
client = { path = "anchor/client" }
qbft = { path = "anchor/qbft" }
http_api = { path = "anchor/http_api" }
network = { path ="anchor/network"}
version = { path ="anchor/common/version"}
lighthouse_network = { git = "https://github.com/sigp/lighthouse", branch = "unstable"}
task_executor = { git = "https://github.com/sigp/lighthouse", branch = "unstable", default-features = false, features = [
    "tracing",
] }
sensitive_url = { git = "https://github.com/sigp/lighthouse", branch = "unstable" }
slot_clock = { git = "https://github.com/sigp/lighthouse", branch = "unstable" }
unused_port = { git = "https://github.com/sigp/lighthouse", branch = "unstable" }
derive_more = { version = "1.0.0", features = ["full"] }
async-channel = "1.9"
axum = "0.7.7"
clap = { version = "4.5.15", features = ["derive", "wrap_help"]}
discv5 = "0.8.0"
dirs = "5.0.1"
either = "1.13.0"
futures = "0.3.30"
hyper = "1.4"
serde = { version = "1.0.208", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.39.2", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
    "macros",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
