[workspace]
# Extra tooling projects will be added.
members = [
    "anchor",
    "anchor/client",
    "anchor/http_api",
    "anchor/http_metrics",
    "anchor/qbft",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
client = { path = "anchor/client" }
qbft = { path = "anchor/qbft" }
http_api = { path = "anchor/http_api" }
http_metrics = { path = "anchor/http_metrics" }
task_executor = { git = "https://github.com/sigp/lighthouse", branch = "anchor", default-features = false, features = [
    "tracing",
] }
metrics = { git = "https://github.com/sigp/lighthouse", branch = "anchor" }
validator_metrics = { git = "https://github.com/sigp/lighthouse", branch = "anchor" }
sensitive_url = { git = "https://github.com/sigp/lighthouse", branch = "anchor" }
slot_clock = { git = "https://github.com/sigp/lighthouse", branch = "anchor" }
derive_more = { version = "1.0.0", features = ["full"] }
async-channel = "1.9"
axum = "0.7.7"
clap = { version = "4.5.15", features = ["derive", "wrap_help"]}
dirs = "5.0.1"
futures = "0.3.30"
# dirs = "3"
http = "1.1"
tower-http = "0.6"
hyper = "1.4"
parking_lot = "0.12"
serde = { version = "1.0.208", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.39.2", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "signal",
    "macros",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

