[package]
name = "network"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
tokio = { workspace = true }
libp2p = { version = "0.54", default-features = false, features = ["identify", "yamux", "noise", "secp256k1", "tcp", "tokio", "macros", "gossipsub", "quic", "ping"] }
futures = { workspace = true }
task_executor = { workspace = true }
version = { workspace = true }
lighthouse_network = { workspace = true}
discv5 = { workspace = true }
dirs = {  workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-channel = { workspace = true }